improvements from SAN Ouest Provence : * introducing a category_type into categories. It can be A (adult), C (children), P (Professionnal), I (institution/organisation). * each category_type has it's own forms to create members. * the borrowers table has been heavily modified (many fields changed), to get something more logic & readable * reintroducing guarantor/guanrantee system that is now independant from hardcoded C/A for categories * updating templates to fit template rules
(see mail feb, 17 on koha-devel "new features for borrowers" for more details)

--- a/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
@@ -66,9 +66,13 @@
 		</ul>
 	</li>
 	<li>Koha Administration
-		<ul><li><a href="/cgi-bin/koha/admin/admin-home.pl">System Adminstration Home</a></li>
-		<li><a href="/cgi-bin/koha/admin/systempreferences.pl">System Preferences</a></li><li><a href="/cgi-bin/koha/barcodes/barcodes.pl">Barcodes generator</a></li></ul></li>
-
+		<ul>
+		<li><a href="/cgi-bin/koha/tools/tools-home.pl">Tools</a></li>
+		<li><a href="/cgi-bin/koha/admin/admin-home.pl">System Administration Home</a></li>
+		<li><a href="/cgi-bin/koha/admin/systempreferences.pl">System Preferences</a></li>
+		<li><a href="/cgi-bin/koha/barcodes/barcodes.pl">Barcodes generator</a></li>
+		</ul>
+	</li>
 </ul>
 <div id="news">
 	<h1>News</h1>
