- adding some css properties (minor) - adding links in members menu
improvements from SAN Ouest Provence :
* introducing a category_type into categories. It can be A (adult), C (children), P (Professionnal), I (institution/organisation).
* each category_type has it's own forms to create members.
* the borrowers table has been heavily modified (many fields changed), to get something more logic & readable
* reintroducing guarantor/guanrantee system that is now independant from hardcoded C/A for categories
* updating templates to fit template rules

(see mail feb, 17 on koha-devel "new features for borrowers" for more details)

--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
@@ -1,6 +1,6 @@
 body {
 	font-family : Verdana, Geneva, Arial, sans-serif;
-	font-size : .7em;
+	font-size : .9em;
 }
 
 table {
@@ -33,6 +33,14 @@ th[scope=row] {
 	text-align : right;
 }
 
+input {
+	font-size:0.9em;
+}
+
+select {
+	font-size:0.9em;
+}
+
 input[type=submit], input[type=button], input[type=reset] {
 	background-color : #6699cc;
 	color : #FFFFFF;
@@ -50,4 +58,16 @@ tr.highlight td, tr.highlight th {
 
 #admin_stopwords_select UL LI {
    white-space: nowrap;
+}
+fieldset {
+	display:inline;
+	vertical-align:top;
+}
+legend {
+	font-size:120%;
+	font-weight:bold;
+}
+
+label {
+	width:10em;
 }
