--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
@@ -59,15 +59,20 @@ tr.highlight td, tr.highlight th {
 #admin_stopwords_select UL LI {
    white-space: nowrap;
 }
-fieldset {
-	display:inline;
-	vertical-align:top;
+
+A.button {
+  background-color: #69c;
+  color: white;
+  text-decoration: none;
+  font-size: 1em;
+  font-weight: bold;
+  border: 2px solid #eee;
+  border-right-color: gray;
+  border-bottom-color: gray;
+  padding: 2px;
 }
+
 legend {
 	font-size:120%;
 	font-weight:bold;
-}
-
-label {
-	width:10em;
 }
