--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -137,7 +137,11 @@
 		</tr>
 	
 		<!-- tmpl_loop name="issueloop" -->
-		<tr>
+                  <!-- TMPL_IF NAME="toggle" -->
+		<tr class="highlight">
+                  <!-- TMPL_ELSE -->
+                <tr>
+                  <!-- /TMPL_IF -->
 			<td>
 				<!-- TMPL_IF name="red" --><span class="overdue"><!-- /TMPL_IF -->
 				<!-- TMPL_VAR NAME="title" --><!-- TMPL_IF name="red" --></span><!-- /TMPL_IF -->
@@ -196,7 +200,11 @@
 		</tr>
 	
 		<!-- TMPL_LOOP name="reserveloop" -->
-		<tr>
+                  <!-- TMPL_IF NAME="toggle" -->
+		<tr class="highlight">
+                  <!-- TMPL_ELSE -->
+                <tr>
+                  <!-- /TMPL_IF -->
 			<td>
 				<a href="/cgi-bin/koha/request.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->"><!-- TMPL_VAR NAME="btitle" --></a>
 				<!-- TMPL_IF name="volumeddesc" -->
